0.2.9:
----

 * Set Plugin consistencies
 * Use lang API - extends required version
 * add more sqlite db type checks

0.2.8:
    Add cronjob support through cronjob plugin
    Add support to empty cronjoblog db table
    
0.2.6:
    Proper nav markup for 2.0 backend (yellowled)

0.2.5:
    Added additional backend markup for 2.0 backend (yellowled)

0.2.3:
    Moved menu to admin-section